--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,13 @@ set(CMAKE_CXX_STANDARD 17)
 pico_sdk_init()
 
 add_executable(embedded_proj
-    main.c
+    main_pico2.c
+    kissfft/kiss_fft.c
+)
+
+target_include_directories(embedded_proj PRIVATE
+    ${CMAKE_CURRENT_LIST_DIR}
+    ${CMAKE_CURRENT_LIST_DIR}/kissfft
 )
 
 # Enable USB output, disable UART output
