--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,11 +13,11 @@ set(CMAKE_CXX_STANDARD 17)
 pico_sdk_init()
 
 add_executable(embedded_proj
-    main_pico2.c
-    kissfft/kiss_fft.c
-    MMWAVE/mmwave_wrapper.c
-    # main.c
-    Spider/spider_main.c
+    # main_pico2.c
+    # kissfft/kiss_fft.c
+    # MMWAVE/mmwave_wrapper.c
+    main.c
+    # Spider/spider_main.c
 )
 
 target_include_directories(embedded_proj PRIVATE
