Intergrate algo to computer pico. Updated sensor pico and computer pico to have a send command and command executed (might have a bug for this)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,8 @@
     },
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
     "files.associations": {
-        "uart.h": "c"
+        "uart.h": "c",
+        "stdlib.h": "c",
+        "defs.h": "c"
     }
 }
