--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,10 +13,15 @@ set(CMAKE_CXX_STANDARD 17)
 pico_sdk_init()
 
 add_executable(embedded_proj
+    main.c
+    algorithm/algorithm_main.c
+    algorithm/algorithm.c
+    algorithm/control.c
+    algorithm/sensors.c
+
     # main_pico2.c
     # kissfft/kiss_fft.c
     # MMWAVE/mmwave_wrapper.c
-    main.c
     # Spider/spider_main.c
 )
 
@@ -24,6 +29,7 @@ target_include_directories(embedded_proj PRIVATE
     ${CMAKE_CURRENT_LIST_DIR}
     ${CMAKE_CURRENT_LIST_DIR}/kissfft
     ${CMAKE_CURRENT_LIST_DIR}/MMWAVE
+    ${CMAKE_CURRENT_LIST_DIR}/algorithm
 )
 
 # Enable USB output, disable UART output
